<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="25dip"
    android:background="@drawable/list_topbg"
    android:paddingTop="5dip"
    android:paddingBottom="5dip"
    android:orientation="horizontal"
    android:id="@+id/layout_list_top" >
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="28dip"
    android:background="@drawable/list_topbg"
    android:orientation="horizontal">
    
<TableRow 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/txt_topic"
        style="@style/list_top_txt"
        android:text="@string/headline" /> 
    
    <TextView
        android:id="@+id/txt_house"
        style="@style/list_top_txt"
        android:text="@string/house" />
    
    <TextView
        android:id="@+id/txt_car"
        style="@style/list_top_txt"
        android:text="@string/car" />
    

    <TextView
        android:id="@+id/txt_fashion"
        style="@style/list_top_txt"
        android:text="@string/fashion" />
    
    
    <TextView
        android:id="@+id/txt_lift"
        style="@style/list_top_txt"
        android:text="@string/lift" />
    
    
    <TextView
        android:id="@+id/txt_traval"
        style="@style/list_top_txt"
        android:text="@string/traval" />
    
    </TableRow>
    </LinearLayout>
    

</RelativeLayout>